feat: 🎸 add vee-validate package form

--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
         "primeicons": "^6.0.1",
         "primevue": "^3",
         "vdi": "^1.0.0",
+        "vee-validate": "^4.7.3",
         "vue": "^3.2.45",
-        "vue-router": "^4.1.6"
+        "vue-router": "^4.1.6",
+        "yup": "^0.32.11"
     },
     "devDependencies": {
         "@rushstack/eslint-patch": "^1.1.4",
