--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
         "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
     },
     "dependencies": {
+        "@unocss/reset": "^0.49.4",
         "@wendellhu/redi": "^0.6.2",
+        "axios": "^1.3.2",
         "primeicons": "^6.0.1",
         "primevue": "^3",
+        "unocss": "^0.49.4",
         "vdi": "^1.2.2",
         "vee-validate": "^4.7.3",
         "vue": "^3.2.45",
