--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
         "router.d.ts"
     ],
     "compilerOptions": {
+        "experimentalDecorators": true,
         "baseUrl": ".",
         "paths": {
             "@/*": ["./src/*"],
