--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "@unocss/transformer-directives": "^0.49.4",
         "@vitejs/plugin-vue": "^4.0.0",
         "@vitejs/plugin-vue-jsx": "^3.0.0",
+        "@vue-macros/volar": "^0.8.2",
         "@vue/eslint-config-prettier": "^7.0.0",
         "@vue/eslint-config-typescript": "^11.0.0",
         "@vue/tsconfig": "^0.1.3",
@@ -38,6 +39,7 @@
         "npm-run-all": "^4.1.5",
         "prettier": "^2.7.1",
         "typescript": "~4.7.4",
+        "unplugin-vue-macros": "^1.8.2",
         "vite": "^4.0.0",
         "vue-tsc": "^1.0.12"
     }
