--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,9 +15,20 @@
             "@/*": ["./src/*"],
             "@core/*": ["./src/core/*"],
             "@shared/*": ["./src/shared/*"]
-        }
+        },
+        "types": ["unplugin-vue-macros/macros-global"]
     },
-
+    "vueCompilerOptions": {
+        "plugins": [
+            "@vue-macros/volar/define-model",
+            "@vue-macros/volar/define-props",
+            "@vue-macros/volar/define-props-refs",
+            "@vue-macros/volar/short-vmodel",
+            "@vue-macros/volar/define-slots",
+            "@vue-macros/volar/export-props"
+        ]
+        // ...
+    },
     "references": [
         {
             "path": "./tsconfig.config.json"
