--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     },
     "dependencies": {
         "@unocss/reset": "^0.49.4",
+        "@vueuse/core": "^9.13.0",
         "@wendellhu/redi": "^0.6.2",
         "axios": "^1.3.2",
         "primeicons": "^6.0.1",
