--- a/package.json
+++ b/package.json
@@ -37,11 +37,13 @@
         "@vue/tsconfig": "^0.1.3",
         "eslint": "^8.22.0",
         "eslint-plugin-vue": "^9.3.0",
+        "markdown-it-shiki": "^0.8.0",
         "npm-run-all": "^4.1.5",
         "prettier": "^2.7.1",
         "typescript": "~4.7.4",
         "unplugin-vue-macros": "^1.8.2",
         "vite": "^4.0.0",
+        "vite-plugin-vue-markdown": "^0.22.4",
         "vue-tsc": "^1.0.12"
     }
 }
