--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
         "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
     },
     "dependencies": {
+        "@iconify-json/tabler": "^1.1.61",
+        "@unocss/preset-icons": "^0.49.8",
         "@unocss/reset": "^0.49.4",
         "@vueuse/core": "^9.13.0",
         "@wendellhu/redi": "^0.6.2",
