--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "devDependencies": {
         "@rushstack/eslint-patch": "^1.1.4",
         "@types/node": "^18.11.12",
+        "@unocss/preset-uno": "^0.50.0",
         "@unocss/transformer-directives": "^0.49.4",
         "@vitejs/plugin-vue": "^4.0.0",
         "@vitejs/plugin-vue-jsx": "^3.0.0",
