--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
         "npm-run-all": "^4.1.5",
         "prettier": "^2.7.1",
         "typescript": "~4.7.4",
+        "unplugin-auto-import": "^0.15.0",
         "unplugin-vue-macros": "^1.8.2",
         "vite": "^4.0.0",
         "vite-plugin-vue-markdown": "^0.22.4",
